do not use skeptic tests for cov report

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ log = "0.3"
 env_logger = "*"
 
 #actix = { git="https://github.com/fafhrd91/actix.git" }
+skeptic = { version = "0.13", optional = true }
 
 [dependencies.actix]
 #path = "../actix"
