--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,10 +30,13 @@ nightly = []
 time = "0.1"
 http = "0.1"
 httparse = "0.1"
+http-range = "0.1"
 cookie = { version="0.10", features=["percent-encode"] }
+regex = "0.2"
 slab = "0.4"
 sha1 = "0.2"
 url = "1.5"
+lazy_static = "0.2"
 route-recognizer = "0.1"
 
 # tokio
