--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ regex = "0.2"
 slab = "0.4"
 sha1 = "0.2"
 url = "1.5"
+multipart-async = { version = "0.*", features=["server"]}
 
 # tokio
 bytes = "0.4"
