update multipart impl

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,9 +49,9 @@ tokio-io = "0.1"
 tokio-proto = "0.1"
 
 [dependencies.actix]
-#path = "../actix"
-#git = "https://github.com/fafhrd91/actix.git"
-version = "0.2"
+# path = "../actix"
+git = "https://github.com/fafhrd91/actix.git"
+#version = "0.2"
 default-features = false
 features = []
 
