--- a/examples/multipart/Cargo.toml
+++ b/examples/multipart/Cargo.toml
@@ -9,5 +9,6 @@ path = "src/main.rs"
 
 [dependencies]
 env_logger = "*"
-actix = "0.2"
+# actix = "0.2"
+actix = { git = "https://github.com/fafhrd91/actix.git" }
 actix-web = { path = "../../" }
