--- a/examples/websocket-chat/Cargo.toml
+++ b/examples/websocket-chat/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 
 [[bin]]
-name = "websocket"
+name = "server"
 path = "src/main.rs"
 
 [[bin]]
@@ -18,6 +18,7 @@ byteorder = "1.1"
 futures = "0.1"
 tokio-io = "0.1"
 tokio-core = "0.1"
+env_logger = "*"
 
 serde = "1.0"
 serde_json = "1.0"
