--- a/examples/websocket-chat/Cargo.toml
+++ b/examples/websocket-chat/Cargo.toml
@@ -24,6 +24,6 @@ serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
 
-actix = { git = "https://github.com/fafhrd91/actix.git" }
+actix = { git = "https://github.com/actix/actix.git" }
 # actix = { path = "../../../actix" }
 actix-web = { path = "../../" }
