--- a/examples/multipart/Cargo.toml
+++ b/examples/multipart/Cargo.toml
@@ -9,6 +9,6 @@ path = "src/main.rs"
 
 [dependencies]
 env_logger = "*"
-# actix = "0.2"
-actix = { git = "https://github.com/actix/actix.git" }
+actix = "0.3"
+#actix = { git = "https://github.com/actix/actix.git" }
 actix-web = { path = "../../" }
