--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,7 @@ default-features = false
 features = []
 
 [dev-dependencies]
-env_logger = "*"
+env_logger = "0.4"
 reqwest = "0.8"
 
 [profile.release]
