Fix disconnection handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ tokio-proto = "0.1"
 # h2 = { git = 'https://github.com/carllerche/h2', optional = true }
 
 [dependencies.actix]
-#version = "0.3"
+#version = ">=0.3.1"
 #path = "../actix"
 git = "https://github.com/actix/actix.git"
 default-features = false
