--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,9 @@ path = "src/lib.rs"
 [features]
 default = []
 
-# http/2
+# tls
+tls = ["native-tls", "tokio-tls"]
+
 # http2 = ["h2"]
 
 [dependencies]
@@ -48,6 +50,10 @@ futures = "0.1"
 tokio-io = "0.1"
 tokio-core = "0.1"
 # h2 = { git = 'https://github.com/carllerche/h2', optional = true }
+
+# tls
+native-tls = { version="0.1", optional = true }
+tokio-tls = { version="0.1", optional = true }
 
 [dependencies.actix]
 version = ">=0.3.1"
