--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,12 @@ version = "0.3.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix web framework"
 readme = "README.md"
-keywords = ["actor", "http", "web"]
+keywords = ["actix", "actor", "http", "web", "async", "tokio", "futures", "web"]
 homepage = "https://github.com/actix/actix-web"
 repository = "https://github.com/actix/actix-web.git"
 documentation = "https://docs.rs/actix-web/"
-categories = ["network-programming", "asynchronous"]
+categories = ["network-programming", "asynchronous",
+              "web-programming::http-server", "web-programming::websocket"]
 license = "Apache-2.0"
 exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
 build = "build.rs"
