--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,9 @@ tls = ["native-tls", "tokio-tls"]
 # openssl
 alpn = ["openssl", "openssl/v102", "openssl/v110", "tokio-openssl"]
 
+# nightly
+nightly = []
+
 [dependencies]
 log = "0.3"
 failure = "0.1"
