start working on guide

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,13 @@ before_script:
 
 script:
   - USE_SKEPTIC=1 cargo test --features=alpn
+
+  # Build without unstable flag
+  - cargo build
+
+  # Test examples in guide.
+  - rustdoc --test guide/src/qs_2.md -L target/debug -L target/debug/deps
+
   - |
     if [[ "$TRAVIS_RUST_VERSION" == "nightly" && $CLIPPY ]]; then
         cargo clippy
@@ -40,6 +47,8 @@ after_success:
     if [[ "$TRAVIS_OS_NAME" == "linux" && "$TRAVIS_PULL_REQUEST" = "false" && "$TRAVIS_BRANCH" == "master" && "$TRAVIS_RUST_VERSION" == "nightly" ]]; then
       cargo doc --features alpn --no-deps &&
       echo "<meta http-equiv=refresh content=0;url=os_balloon/index.html>" > target/doc/index.html &&
+      cargo install mdbook &&
+      cd guide && mdbook build -d ../target/doc/guide && cd .. &&
       git clone https://github.com/davisp/ghp-import.git &&
       ./ghp-import/ghp_import.py -n -p -f -m "Documentation upload" -r https://"$GH_TOKEN"@github.com/"$TRAVIS_REPO_SLUG.git" target/doc &&
       echo "Uploaded documentation"
