--- a/guide/book.toml
+++ b/guide/book.toml
@@ -1,3 +1,6 @@
 title = "Actix web"
 description = "Actix web framework guide"
 author = "Actix Project and Contributors"
+
+[output.html]
+google-analytics = "UA-110322332-1"
