--- a/examples/tls/Cargo.toml
+++ b/examples/tls/Cargo.toml
@@ -9,6 +9,5 @@ path = "src/main.rs"
 
 [dependencies]
 env_logger = "0.4"
-
 actix = "^0.3.1"
-actix-web = { path = "../../", features=["alpn"] }
+actix-web = { git = "https://github.com/actix/actix-web.git", features=["alpn"] }
