use http::Uri for uri parsing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ log = "0.3"
 failure = "0.1"
 failure_derive = "0.1"
 time = "0.1"
-http = "0.1"
+http = "^0.1.2"
 httparse = "0.1"
 http-range = "0.1"
 mime = "0.3"
