handle http connections in different threads

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ regex = "0.2"
 sha1 = "0.2"
 url = "1.5"
 libc = "0.2"
+socket2 = "0.2"
 serde = "1.0"
 serde_json = "1.0"
 flate2 = "0.2"
@@ -53,6 +54,7 @@ brotli2 = "^0.3.2"
 percent-encoding = "1.0"
 smallvec = "0.6"
 bitflags = "1.0"
+num_cpus = "1.0"
 cookie = { version="0.10", features=["percent-encode", "secure"] }
 
 # tokio
