refactor multipart stream creation

--- a/examples/multipart/Cargo.toml
+++ b/examples/multipart/Cargo.toml
@@ -9,5 +9,7 @@ path = "src/main.rs"
 
 [dependencies]
 env_logger = "*"
+futures = "0.1"
 actix = "^0.3.1"
-actix-web = { git = "https://github.com/actix/actix-web.git" }
+#actix-web = { git = "https://github.com/actix/actix-web.git" }
+actix-web = { path = "../../" }
