--- a/examples/multipart/Cargo.toml
+++ b/examples/multipart/Cargo.toml
@@ -11,5 +11,4 @@ path = "src/main.rs"
 env_logger = "*"
 futures = "0.1"
 actix = "^0.3.1"
-#actix-web = { git = "https://github.com/actix/actix-web.git" }
-actix-web = { path = "../../" }
+actix-web = { git = "https://github.com/actix/actix-web.git" }
