--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,17 @@ before_script:
 
 script:
   - USE_SKEPTIC=1 cargo test --features=alpn
-  - cd examples/diesel && cargo check && cd ../..
-  - cd examples/multipart && cargo check && cd ../..
-  - cd examples/template_tera && cargo check && cd ../..
-  - cd examples/tls && cargo check && cd ../..
-  - cd examples/websocket-chat && cargo check && cd ../..
+  - |
+    if [[ "$TRAVIS_RUST_VERSION" == "1.20.0" ]]; then
+       cd examples/diesel && cargo check && cd ../..
+       cd examples/multipart && cargo check && cd ../..
+    fi
+  - |
+    if [[ "$TRAVIS_RUST_VERSION" == "beta" ]]; then
+       cd examples/template_tera && cargo check && cd ../..
+       cd examples/tls && cargo check && cd ../..
+       cd examples/websocket-chat && cargo check && cd ../..
+    fi
   - |
     if [[ "$TRAVIS_RUST_VERSION" == "nightly" && $CLIPPY ]]; then
         cargo clippy
