--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,6 +4,15 @@ environment:
   matrix:
     # Stable channel
     - TARGET: i686-pc-windows-gnu
+      CHANNEL: 1.20.0
+    - TARGET: i686-pc-windows-msvc
+      CHANNEL: 1.20.0
+    - TARGET: x86_64-pc-windows-gnu
+      CHANNEL: 1.20.0
+    - TARGET: x86_64-pc-windows-msvc
+      CHANNEL: 1.20.0
+    # Stable channel
+    - TARGET: i686-pc-windows-gnu
       CHANNEL: stable
     - TARGET: i686-pc-windows-msvc
       CHANNEL: stable
@@ -22,13 +31,13 @@ environment:
       CHANNEL: beta
     # Nightly channel
     - TARGET: i686-pc-windows-gnu
-      CHANNEL: nightly
+      CHANNEL: nightly-2017-12-21
     - TARGET: i686-pc-windows-msvc
-      CHANNEL: nightly
+      CHANNEL: nightly-2017-12-21
     - TARGET: x86_64-pc-windows-gnu
-      CHANNEL: nightly
+      CHANNEL: nightly-2017-12-21
     - TARGET: x86_64-pc-windows-msvc
-      CHANNEL: nightly
+      CHANNEL: nightly-2017-12-21
 
 # Install Rust and Cargo
 # (Based on from https://github.com/rust-lang/libc/blob/master/appveyor.yml)
