--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,6 @@ regex = "0.2"
 sha1 = "0.2"
 url = "1.5"
 libc = "0.2"
-socket2 = "0.2"
 serde = "1.0"
 serde_json = "1.0"
 flate2 = "0.2"
@@ -57,7 +56,9 @@ bitflags = "1.0"
 num_cpus = "1.0"
 cookie = { version="0.10", features=["percent-encode", "secure"] }
 
-# tokio
+# io
+mio = "0.6"
+net2 = "0.2"
 bytes = "0.4"
 futures = "0.1"
 tokio-io = "0.1"
