--- a/examples/signals/Cargo.toml
+++ b/examples/signals/Cargo.toml
@@ -11,7 +11,4 @@ path = "src/main.rs"
 env_logger = "*"
 futures = "0.1"
 actix = "^0.3.5"
-
-#actix-web = { git = "https://github.com/actix/actix-web.git" }
-
-actix-web = { path="../../", features=["signal"] }
+actix-web = { git = "https://github.com/actix/actix-web.git", features=["signal"] }
