--- a/examples/json/Cargo.toml
+++ b/examples/json/Cargo.toml
@@ -11,6 +11,7 @@ env_logger = "*"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
+json = "*"
 
-actix = "^0.3.1"
-actix-web = { git = "https://github.com/actix/actix-web.git" }
+actix = "^0.3.5"
+actix-web = { git = "https://github.com/actix/actix-web", features=["signal"] }
