--- a/examples/template_tera/Cargo.toml
+++ b/examples/template_tera/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 
 [dependencies]
 env_logger = "0.4"
-actix = "^0.3.1"
-actix-web = { git = "https://github.com/actix/actix-web.git" }
+actix = "^0.3.5"
+actix-web = { git = "https://github.com/actix/actix-web", features=["signal"] }
 tera = "*"
