--- a/examples/tls/Cargo.toml
+++ b/examples/tls/Cargo.toml
@@ -9,5 +9,5 @@ path = "src/main.rs"
 
 [dependencies]
 env_logger = "0.4"
-actix = "^0.3.1"
-actix-web = { git = "https://github.com/actix/actix-web.git", features=["alpn"] }
+actix = { version = "^0.3.5" }
+actix-web = { git = "https://github.com/actix/actix-web", features=["signal", "alpn"] }
