--- a/examples/websocket-chat/Cargo.toml
+++ b/examples/websocket-chat/Cargo.toml
@@ -24,5 +24,5 @@ serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
 
-actix = "^0.3.1"
-actix-web = { git = "https://github.com/actix/actix-web.git" }
+actix = { version = "^0.3.5" }
+actix-web = { git = "https://github.com/actix/actix-web", features=["signal"] }
