--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ script:
        cd examples/diesel && cargo check && cd ../..
        cd examples/tls && cargo check && cd ../..
        cd examples/websocket-chat && cargo check && cd ../..
+       cd examples/websocket && cargo check && cd ../..
     fi
   - |
     if [[ "$TRAVIS_RUST_VERSION" == "nightly" && $CLIPPY ]]; then
