--- a/examples/diesel/Cargo.toml
+++ b/examples/diesel/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 
 [dependencies]
 env_logger = "0.4"
-actix = "^0.3.1"
-actix-web = { git = "https://github.com/actix/actix-web.git" }
+actix = "^0.3.5"
+actix-web = { git = "https://github.com/actix/actix-web", features=["signal"] }
 
 futures = "0.1"
 uuid = { version = "0.5", features = ["serde", "v4"] }
