--- a/examples/basic/Cargo.toml
+++ b/examples/basic/Cargo.toml
@@ -2,6 +2,7 @@
 name = "basic"
 version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
+workspace = "../.."
 
 [dependencies]
 futures = "*"
