--- a/examples/diesel/Cargo.toml
+++ b/examples/diesel/Cargo.toml
@@ -2,6 +2,7 @@
 name = "diesel-example"
 version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
+workspace = "../.."
 
 [dependencies]
 env_logger = "0.4"
