--- a/examples/json/Cargo.toml
+++ b/examples/json/Cargo.toml
@@ -2,6 +2,7 @@
 name = "json-example"
 version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
+workspace = "../.."
 
 [dependencies]
 bytes = "0.4"
