--- a/examples/signals/Cargo.toml
+++ b/examples/signals/Cargo.toml
@@ -2,6 +2,7 @@
 name = "signals"
 version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
+workspace = "../.."
 
 [[bin]]
 name = "server"
