--- a/examples/state/Cargo.toml
+++ b/examples/state/Cargo.toml
@@ -2,6 +2,7 @@
 name = "state"
 version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
+workspace = "../.."
 
 [dependencies]
 futures = "*"
