--- a/examples/template_tera/Cargo.toml
+++ b/examples/template_tera/Cargo.toml
@@ -2,6 +2,7 @@
 name = "template-tera"
 version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
+workspace = "../.."
 
 [dependencies]
 env_logger = "0.4"
