add example to workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -101,3 +101,15 @@ opt-level = 3
 # debug = true
 
 [workspace]
+members = [
+  "./",
+  "examples/basic",
+  "examples/diesel",
+  "examples/json",
+  "examples/multipart",
+  "examples/signals",
+  "examples/state",
+  "examples/template_tera",
+  "examples/tls",
+  "examples/websocket-chat",
+]
