--- a/examples/hello-world/Cargo.toml
+++ b/examples/hello-world/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "basic"
+name = "hello-world"
 version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 workspace = "../.."
 
 [dependencies]
-futures = "*"
 env_logger = "0.4"
 actix = "^0.3.5"
-actix-web = { git = "https://github.com/actix/actix-web", features=["signal"] }
+actix-web = { path = "../../" }
