--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,3 +115,6 @@ members = [
   "examples/websocket",
   "examples/websocket-chat",
 ]
+
+[patch.crates-io]
+ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.12" }
