--- a/examples/signals/Cargo.toml
+++ b/examples/signals/Cargo.toml
@@ -12,4 +12,4 @@ path = "src/main.rs"
 env_logger = "*"
 futures = "0.1"
 actix = "^0.3.5"
-actix-web = { git = "https://github.com/actix/actix-web.git", features=["signal"] }
+actix-web = { path = "../../", features=["signal"] }
