--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,9 +32,6 @@ tls = ["native-tls", "tokio-tls"]
 # openssl
 alpn = ["openssl", "openssl/v102", "openssl/v110", "tokio-openssl"]
 
-# signals
-signal = ["actix/signal"]
-
 [dependencies]
 log = "0.3"
 failure = "0.1"
@@ -77,9 +74,7 @@ tokio-tls = { version="0.1", optional = true }
 tokio-openssl = { version="0.1", optional = true }
 
 [dependencies.actix]
-version = "^0.3.5"
-default-features = false
-features = []
+version = "0.4"
 
 [dependencies.openssl]
 version = "0.9"
