--- a/examples/json/Cargo.toml
+++ b/examples/json/Cargo.toml
@@ -14,5 +14,5 @@ serde_json = "1.0"
 serde_derive = "1.0"
 json = "*"
 
-actix = "^0.3.5"
-actix-web = { git = "https://github.com/actix/actix-web", features=["signal"] }
+actix = "0.4"
+actix-web = { git = "https://github.com/actix/actix-web" }
