--- a/examples/state/Cargo.toml
+++ b/examples/state/Cargo.toml
@@ -7,5 +7,5 @@ workspace = "../.."
 [dependencies]
 futures = "*"
 env_logger = "0.4"
-actix = "^0.3.5"
-actix-web = { git = "https://github.com/actix/actix-web", features=["signal"] }
+actix = "0.4"
+actix-web = { git = "https://github.com/actix/actix-web" }
