--- a/examples/tls/Cargo.toml
+++ b/examples/tls/Cargo.toml
@@ -10,5 +10,5 @@ path = "src/main.rs"
 
 [dependencies]
 env_logger = "0.4"
-actix = { version = "^0.3.5" }
-actix-web = { git = "https://github.com/actix/actix-web", features=["signal", "alpn"] }
+actix = "0.4"
+actix-web = { git = "https://github.com/actix/actix-web", features=["alpn"] }
