--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,10 @@ percent-encoding = "1.0"
 smallvec = "0.6"
 bitflags = "1.0"
 num_cpus = "1.0"
-cookie = { version="0.10", features=["percent-encode", "secure"] }
+
+# temp solution
+# cookie = { version="0.10", features=["percent-encode", "secure"] }
+cookie = { git="https://github.com/alexcrichton/cookie-rs.git", features=["percent-encode", "secure"] }
 
 # io
 mio = "0.6"
@@ -110,6 +113,3 @@ members = [
   "examples/websocket",
   "examples/websocket-chat",
 ]
-
-[patch.crates-io]
-ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.12" }
