--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,7 +77,7 @@ tokio-tls = { version="0.1", optional = true }
 tokio-openssl = { version="0.1", optional = true }
 
 [dependencies.actix]
-version = "0.4"
+version = "^0.4.1"
 
 [dependencies.openssl]
 version = "0.9"
