--- a/examples/websocket/Cargo.toml
+++ b/examples/websocket/Cargo.toml
@@ -10,5 +10,6 @@ path = "src/main.rs"
 [dependencies]
 env_logger = "*"
 futures = "0.1"
-actix = "0.4"
+#actix = "0.4"
+actix = { git = "https://github.com/actix/actix.git" }
 actix-web = { git = "https://github.com/actix/actix-web.git" }
