--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,8 +77,7 @@ tokio-tls = { version="0.1", optional = true }
 tokio-openssl = { version="0.1", optional = true }
 
 [dependencies.actix]
-#version = "^0.4.2"
-git = "https://github.com/actix/actix.git"
+version = "^0.4.2"
 
 [dependencies.openssl]
 version = "0.9"
